# kroPipe

./: CMakeLists.txt  README.md  compilarShader.sh  exec.sh  kroPipe_include.hpp  main.cpp
VKInitConfig/: kroPipe_init.hpp
VKconfiguration/: kroPipe_buffer.hpp  kroPipe_command.hpp  kroPipe_debug.hpp  kroPipe_depth.hpp  kroPipe_device.hpp  kroPipe_frameBuffer.hpp  kroPipe_imageView.hpp  kroPipe_instance.hpp  kroPipe_miniMaps.hpp  kroPipe_name.hpp  kroPipe_pipeline.hpp  kroPipe_queuFamilies.hpp  kroPipe_render.hpp  kroPipe_swapchain.hpp  kroPipe_vertex.hpp  kroPipe_window.hpp  kroPipe_windowSurface.hpp
VKkropipe/: kroPipe_AABB.hpp  kroPipe_ImGui.hpp  kroPipe_Log.hpp  kroPipe_camera.hpp  kroPipe_entity.hpp  kroPipe_gravity.hpp  kroPipe_info.hpp  kroPipe_input.hpp  kroPipe_model.hpp  kroPipe_object.hpp  kroPipe_struct.hpp  kroPipe_texture.hpp
src/: kroPipe_depedence.hpp  kroPipe_engine.hpp  kroPipe_include.hpp  main.cpp  todo
src/Utils/animation/: kroPipe_animation.cpp  kroPipe_animation.hpp
src/Utils/audio/: kroPipe_audio.cpp  kroPipe_audio.hpp
src/Utils/camera/: kroPipe_bufferCamera.hpp  kroPipe_camera.cpp  kroPipe_camera.hpp
src/Utils/gravity/: kroPipe_gravity.cpp  kroPipe_gravity.hpp
src/Utils/imgui/: kroPIpe_imgui.cpp  kroPipe_imgui.hpp
src/Utils/input/: kroPipe_input.cpp  kroPipe_input.hpp
src/Utils/load/: kroPipe_model.cpp  kroPipe_model.hpp
src/Utils/object/: kroPipe_bone.cpp  kroPipe_bone.hpp  kroPipe_light.cpp  kroPipe_light.hpp  kroPipe_model.cpp  kroPipe_model.hpp  kroPipe_object.cpp  kroPipe_object.hpp  kroPipe_player.cpp  kroPipe_player.hpp
src/Utils/ollama/: kroPipe_LLM.cpp  kroPipe_LLM.hpp  ollama.hpp  prompt.kp
src/Utils/terminal/: kroPipe_terminal.cpp  kroPipe_terminal.hpp
src/Utils/time/: kroPipe_time.cpp  kroPipe_time.hpp
src/VKInitConfig/: kroPipe_script.hpp
src/VKconfiguration/: kroPipe_buffer.hpp  kroPipe_command.hpp  kroPipe_debug.hpp  kroPipe_depth.hpp  kroPipe_device.hpp  kroPipe_extension.hpp  kroPipe_frameBuffer.hpp  kroPipe_imageView.hpp  kroPipe_instance.hpp  kroPipe_name.hpp  kroPipe_pipeline.hpp  kroPipe_queuFamilies.hpp  kroPipe_render.hpp  kroPipe_swapchain.hpp  kroPipe_vertex.hpp  kroPipe_window.hpp  kroPipe_windowSurface.hpp
src/VKkropipe/: kroPipe_AABB.hpp  kroPipe_ImGui.hpp  kroPipe_Log.hpp  kroPipe_camera.hpp  kroPipe_entity.hpp  kroPipe_gravity.hpp  kroPipe_info.hpp  kroPipe_input.hpp  kroPipe_mesh.hpp  kroPipe_model.hpp  kroPipe_object.hpp  kroPipe_struct.hpp  kroPipe_texture.hpp
src/Vulkan_Engine/: kroPipe_Aplication.cpp  kroPipe_Aplication.hpp
src/Vulkan_Engine/OS/: kroPipe_os.cpp  kroPipe_os.hpp
src/Vulkan_Engine/buffers/: kroPipe_buffer.cpp  kroPipe_buffer.hpp  kroPipe_bufferManager.cpp  kroPipe_bufferManager.hpp  kroPipe_bufferManagerMacro.hpp  kroPipe_descriptorSet.cpp  kroPipe_descriptorSet.hpp  kroPipe_frameBuffer.cpp  kroPipe_frameBuffer.hpp  kroPipe_uboHandler.cpp  kroPipe_uboHandler.hpp
src/Vulkan_Engine/camera/: kroPipe_camera.hpp
src/Vulkan_Engine/command/: kroPipe_command.cpp  kroPipe_command.hpp
src/Vulkan_Engine/debug/: kroPipe_debug.cpp  kroPipe_debug.hpp
src/Vulkan_Engine/depth/: kroPipe_depth.cpp  kroPipe_depth.hpp
src/Vulkan_Engine/device/: kroPipe_device.cpp  kroPipe_device.hpp
src/Vulkan_Engine/fileEditor/: kroPipe_file.cpp  kroPipe_file.hpp  kroPipe_file.tpp
src/Vulkan_Engine/image/: kroPipe_imageView.cpp  kroPipe_imageView.hpp
src/Vulkan_Engine/instance/: kroPipe_instance.cpp  kroPipe_instance.hpp
src/Vulkan_Engine/load/: kroPipe_model.cpp  kroPipe_model.hpp
src/Vulkan_Engine/object/: kroPipe_entity.hpp  kroPipe_object.hpp
src/Vulkan_Engine/pipeline/: kroPipe_GPGPU.cpp  kroPipe_GPGPU.hpp  kroPipe_pipeline.cpp  kroPipe_pipeline.hpp  kroPipe_vertex_data.hpp
src/Vulkan_Engine/properties/: kroPipe_properties.hpp
src/Vulkan_Engine/queue/: kroPipe_queuFamilies.cpp  kroPipe_queuFamilies.hpp
src/Vulkan_Engine/render/: kroPipe_render.cpp  kroPipe_render.hpp
src/Vulkan_Engine/shader/: compute.spv  frag.spv  shader.frag  shader.vert  vert.spv
src/Vulkan_Engine/swapchain/: kroPipe_swapchain.cpp  kroPipe_swapchain.hpp
src/Vulkan_Engine/text/: kroPipe_text.cpp  kroPipe_text.hpp
src/Vulkan_Engine/texture/: kroPipe_MSAA.cpp  kroPipe_MSAA.hpp  kroPipe_texture.cpp  kroPipe_texture.hpp
src/Vulkan_Engine/vertex/: kroPipe_vertex.cpp  kroPipe_vertex.hpp
src/Vulkan_Engine/window/: kroPipe_window.cpp  kroPipe_window.hpp  kroPipe_windowSurface.cpp  kroPipe_windowSurface.hpp
src/include/glslc/: README.txt  vulkansdk
src/include/glslc/config/: vk_layer_settings.txt
src/include/imgui-master/backends/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
